--- a/nobroker-clone/css/style.css
+++ b/nobroker-clone/css/style.css
@@ -47,15 +47,20 @@ body {
 
 
 .hero {
-  background: url("https://images.unsplash.com/photo-1501183638710-841dd1904471?auto=format&fit=crop&w=1200&q=80") center/cover no-repeat;
+  background: url("https://plus.unsplash.com/premium_photo-1725404428224-664f5f0217b3?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29tbWVyY2lhbCUyMHJlYWwlMjBlc3RhdGV8ZW58MHx8MHx8fDA%3D") center/cover no-repeat;
   padding: 120px 0;
+  height: 700px;
   text-align: center;
   color: white;
+
+
 }
 
 .hero h1 {
   font-size: 48px;
   font-weight: 700;
+  margin-top: 200px;
+  color: #000;
 }
 
 .hero p {
@@ -74,10 +79,11 @@ body {
   font-weight: 600;
 }
 
-/* Search Bar */
+
 .search-bar {
   margin-top: -30px;
   display: flex;
+  /* width: 500px; */
   justify-content: center;
 }
 
@@ -125,13 +131,22 @@ h2 {
   gap: 20px;
 }
 
+
 .card {
   background: white;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  cursor: pointer;
+  transition: 0.3s ease-in-out ;
 }
+.card:hover{
+  transform: scale(1.1);
+  
+  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+  
 
+}
 .card img {
   width: 100%;
   height: 180px;
