--- a/nobroker-clone/css/style.css
+++ b/nobroker-clone/css/style.css
@@ -53,6 +53,50 @@ body {
   color: white;
   border: none;
 }
+/* HAMBURGER */
+.hamburger {
+display: none;
+flex-direction: column;
+cursor: pointer;
+gap: 5px;
+}
+.hamburger span {
+width: 26px;
+height: 3px;
+background: #333;
+border-radius: 5px;
+}
+/* MOBILE MENU */
+.mobile-menu {
+display: none;
+flex-direction: column;
+width: 100%;
+background: white;
+padding: 15px;
+border-top: 1px solid #ddd;
+box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
+.mobile-menu a {
+padding: 10px 0;
+border-bottom: 1px solid #eee;
+text-decoration: none;
+color: #222;
+font-size: 17px;
+}
+
+
+.mobile-menu.show {
+display: flex;
+}
+@media (max-width: 768px) {
+    .nav-links,
+    .auth-buttons {
+        display: none;
+    }
+    .hamburger {
+        display: flex;
+    }
+}
 
 /* Button hover effects */
 .login-btn:hover {
@@ -116,27 +160,22 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-
 .logo {
   font-size: 24px;
   font-weight: 700;
   text-decoration: none;
   color: #000;
 }
-
 .nav-links a {
   margin-left: 20px;
   text-decoration: none;
   color: #333;
   font-weight: 500;
 }
-
 .nav-links .active,
 .nav-links a:hover {
   color: #007bff;
 }
-
-
 .hero {
   background: url("https://plus.unsplash.com/premium_photo-1725404428224-664f5f0217b3?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y29tbWVyY2lhbCUyMHJlYWwlMjBlc3RhdGV8ZW58MHx8MHx8fDA%3D") center/cover no-repeat;
   padding: 120px 0;
